# EcoAnalyzer

./: .gitignore  Cargo.toml
src/: batcher.rs  data.csv  data_1.csv  dataset.rs  infer.rs  main.rs  model.rs  tensor.rs  trian.rs
