[package]
name = "eco_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = {version = "0.18.0",features=["train","ndarray"]}
burn-ndarray = { version = "0.18.0", features = ["blas-openblas"] }
jieba-rs = "0.8.1"
csv = "1.3.1"
anyhow = "1.0.100"
serde = "1.0.228"

openblas-src = { version = "0.10.13", features = ["system"], default-features = false } 